add postBodyDeleteNotRequiredProperty to template

--- a/lib/angular2/shared/services/custom/service.ejs
+++ b/lib/angular2/shared/services/custom/service.ejs
@@ -47,6 +47,7 @@ export class <%-: modelName %>Api extends BaseLoopBackApi {
     <%-: fullPath | q %>;
     let _routeParams: any = {<%- buildRouteParams(routeParams) %>};
     let _postBody: any = {<%- buildPostBody(postData) %>};
+    <%- postBodyDeleteNotRequiredProperty(postData, '_postBody') %>
     let _urlParams: any = {};<%-
     buildUrlParams(model, methodName, urlParams) %><%
     if (model.isUser && methodName === 'logout') { %>
